--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe",
-  "homepage": "https://github.com/Angel2001-programmer/Tic-Tac-Toe-ReactJS",
+  "homepage": "https://angel2001-programmer.github.io/Tic-Tac-Toe-ReactJS/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
